# syntaxmod

./: .gitignore  LICENSE  general.py  pyproject.toml  syntaxmod.py
syntaxmod/: __init__.py  general.py
